--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -21,17 +21,25 @@
         <link rel='stylesheet' id='main-css' href="{{ url_for('static', filename='style.css') }}" type='text/css' media='all' />
         
 
-        <style>
-            #thank-you-message {
-                display: none;
-            }
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script>
+            $(document).ready(function(){
+                $('form').submit(function(event){
+                    event.preventDefault(); // Prevent the default form submission
+                    var formData = $(this).serialize(); // Serialize form data
 
-            .team-image {
-            width: 350px !important; /* Adjust this value as needed */
-            height: 450px !important; /* Adjust this value as needed */
-            object-fit: cover !important; /* Ensures the images maintain their aspect ratio while filling the dimensions */
-            }
-        </style>
+                    $.ajax({
+                        type: 'POST',
+                        url: '/submit-booking',
+                        data: formData,
+                        headers: { 'X-Requested-With': 'XMLHttpRequest' }, // Add this line to include the custom header
+                        success: function(response){
+                            $('#message').text(response).css('color', 'black');
+                        }
+                    });
+                });
+            });
+        </script>
 
     </head>
     <body data-new-gr-c-s-check-loaded="14.1094.0" data-gr-ext-installed="" style="margin-top: 150px;">
@@ -156,58 +164,46 @@
                                                                 </h1>
                                                             </div>
                                                             <div role="form" class="kraftcf">                                                    
-                                                                <form id="contact-form" action="http://127.0.0.1:5000/submit-booking" method="post" class="kraftcf-form" novalidate="novalidate">                                                       
+                                                                <form action="/submit-booking" method="post" class="kraftcf-form">                                                       
                                                                     <div class="contact-form-main">
                                                                         <div class="contact-form-fields-wrap clearfix">
                                                                             <div class="contact-form-fields">
-                                                                                <span class="kraftcf-form-control-wrap name">
-                                                                                    <input type="text" name="name" value="" size="40" class="kraftcf-form-control kraftcf-text kraftcf-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Name*">
-                                                                                    <span role="alert" class="kraftcf-not-valid-tip">The field is required.</span>
-                                                                                </span>
+                                                                                <input type="text" id="name" name="name" placeholder="Name*" required>
                                                                             </div>
                                                                             <div class="contact-form-fields">
-                                                                                <span class="kraftcf-form-control-wrap email">
-                                                                                    <input type="email" name="email" value="" size="40" class="kraftcf-form-control kraftcf-text kraftcf-email kraftcf-validates-as-required kraftcf-validates-as-email" aria-required="true" aria-invalid="false" placeholder="Email*">
-                                                                                    <span role="alert" class="kraftcf-not-valid-tip">The e-mail address entered is invalid.</span>
-                                                                                </span>
+                                                                                <input type="email" name="email" value="" placeholder="Email*" required>
                                                                             </div>
                                                                             <div class="contact-form-fields">
-                                                                                <span class="kraftcf-form-control-wrap subject">
-                                                                                    <input type="text" name="subject" value="" size="40" class="kraftcf-form-control kraftcf-text kraftcf-validates-as-required" aria-required="true" aria-invalid="false" placeholder="PI Professor*">                                                                       
-                                                                                    <span role="alert" class="kraftcf-not-valid-tip">The field is required.</span>
-                                                                                </span>
+                                                                                <input type="text" name="title" value="" placeholder="Title*" required>
                                                                             </div>
                                                                         </div>
 
                                                                         <div class="contact-form-fields-wrap clearfix">
                                                                             <div class="contact-form-fields">
-                                                                                <span class="kraftcf-form-control-wrap date">
-                                                                                    <input type="date" name="date" value="" size="40" class="kraftcf-form-control kraftcf-text kraftcf-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Date*">
-                                                                                    <span role="alert" class="kraftcf-not-valid-tip">The field is required.</span>
-                                                                                </span>
+                                                                                <input type="date" name="date" placeholder="Date*" required>
                                                                             </div>
                                                                             <div class="contact-form-fields">
-                                                                                <span class="kraftcf-form-control-wrap start-time">
-                                                                                    <input type="time" id="start-time" name="start-time" onchange="validateTime(this)" size="40" class="kraftcf-form-control kraftcf-text kraftcf-email kraftcf-validates-as-required" aria-required="true" aria-invalid="false" onfocus="if(this.value=='00:00') { this.value = ''; }" onblur="if(this.value=='') { this.value = '00:00'; }" value="00:00">
-                                                                                    <span role="alert" class="kraftcf-not-valid-tip">The field is required.</span>
-                                                                                </span>
+                                                                                <input type="time" id="start-time" name="start-time" onchange="validateTime(this)" onfocus="if(this.value=='00:00') { this.value = ''; }" onblur="if(this.value=='') { this.value = '00:00'; }" value="00:00" required>
                                                                             </div>
                                                                             <div class="contact-form-fields">
-                                                                                <span class="kraftcf-form-control-wrap end-time">
-                                                                                    <input type="time" id="end-time" name="end-time" onchange="validateTime(this)" size="40" class="kraftcf-form-control kraftcf-text kraftcf-email kraftcf-validates-as-required" aria-required="true" aria-invalid="false" onfocus="if(this.value=='00:00') { this.value = ''; }" onblur="if(this.value=='') { this.value = '00:00'; }" value="00:00">
-                                                                                    <span role="alert" class="kraftcf-not-valid-tip">The field is required.</span>
-                                                                                </span>
+                                                                                <input type="time" id="end-time" name="end-time" onchange="validateTime(this)" onfocus="if(this.value=='00:00') { this.value = ''; }" onblur="if(this.value=='') { this.value = '00:00'; }" value="00:00" required>
                                                                             </div>
                                                                         </div>
                                                                         <p>
-                                                                            <input type="submit" value="SEND MESSAGE" class="kraftcf-form-control kraftcf-submit">
+                                                                            <input type="submit" value="Submit" class="kraftcf-form-control kraftcf-submit">
                                                                         </p>
                                                                     </div>
-                                                                    <div class="kraftcf-response-output kraftcf-display-none kraftcf-validation-errors" role="alert">One or more fields have an error. Please check and try again.</div>
-                                                                    <div class="kraftcf-response-output kraftcf-display-none kraftcf-mail-sent-ok" role="alert">Thank you for your message. It has been sent.</div>
                                                                 </form>
-                                                                <div id="thank-you-message" class="kraftcf-response-output kraftcf-display-none kraftcf-mail-sent-ok" >
-                                                                    Thank you for your message. Your request has been submitted. </div>
+                                                                <div id="message"></div>
+                                                                <!-- Login Button -->
+                                                                {% if not session.get('credentials') %}
+                                                                <a href="{{ auth_url }}">Login with Google</a>
+                                                                {% endif %}
+
+                                                                <!-- Logout Button -->
+                                                                {% if session.get('credentials') %}
+                                                                <a href="/logout">Logout</a>
+                                                                {% endif %}
                                                             </div>
                                                         </div>
                                                     </div>  
@@ -298,28 +294,6 @@
                 document.getElementById('aeroCalendar').style.display = 'none';
                 this.classList.add('active');
                 document.getElementById('aeroButton').classList.remove('active');
-            });
-
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
-                event.preventDefault();
-                const form = event.target;
-    
-                fetch(form.action, {
-                    method: 'POST',
-                    body: new FormData(form),
-                    headers: {
-                        'Accept': 'application/json'
-                    }
-                }).then(response => {
-                    if (response.ok) {
-                        form.style.display = 'none';
-                        document.getElementById('thank-you-message').style.display = 'block';
-                    } else {
-                        alert('Error: Please try again later.');
-                    }
-                }).catch(() => {
-                    alert('Error: Please try again later.');
-                });
             });
 
             function validateTime(input) {
