--- a/docs/templates/contact.html
+++ b/docs/templates/contact.html
@@ -13,10 +13,10 @@
 
         <!-- Links -->      
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
-        <link rel='stylesheet' id='bootstrap-css'  href='assets/lib/bootstrap/css/bootstrap.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='font-awesome-css'  href='assets/css/icons/font-awesome.min.css' type='text/css' media='all' />       
-        <link rel='stylesheet' id='swiper-css' href='assets/lib/swiper/css/swiper.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='cubeportfolio-css'  href='assets/lib/cubeportfolio/css/cubeportfolio.min.css' type='text/css' media='all' />     
+        <link rel='stylesheet' id='bootstrap-css'  href='static/assets/lib/bootstrap/css/bootstrap.min.css' type='text/css' media='all' />
+        <link rel='stylesheet' id='font-awesome-css'  href='static/assets/css/icons/font-awesome.min.css' type='text/css' media='all' />       
+        <link rel='stylesheet' id='swiper-css' href='static/assets/lib/swiper/css/swiper.min.css' type='text/css' media='all' />
+        <link rel='stylesheet' id='cubeportfolio-css'  href='static/assets/lib/cubeportfolio/css/cubeportfolio.min.css' type='text/css' media='all' />     
 
         <link rel='stylesheet' id='main-css'  href='style.css' type='text/css' media='all' />
 
@@ -41,8 +41,8 @@
                 <div class="container">
                     <div id="site-branding">			
                         <a class="logo-brand" href="index.html">
-                            <img class="logo" src="assets/images/logo/logo.png" alt="Logo">					                            
-                            <img class="retina-logo" src="assets/images/logo/logo2x.png" alt="Retina Logo">						                            
+                            <img class="logo" src="static/assets/images/logo/logo.png" alt="Logo">					                            
+                            <img class="retina-logo" src="static/assets/images/logo/logo2x.png" alt="Retina Logo">						                            
                         </a>	
                     </div><!-- .site-branding -->
                     <span id="ham-trigger-wrap">
@@ -78,7 +78,7 @@
                             <article class="page">                                
                                 <div class="entry-content">     
                                     
-                                    <div class="container-fluid hero-section m-b-35" style="background-image: url(&#39;assets/images/icons/IMG_7996.jpg&#39;); background-position: left top;">  
+                                    <div class="container-fluid hero-section m-b-35" style="background-image: url(&#39;static/assets/images/icons/IMG_7996.jpg&#39;); background-position: left top;">  
                                     </div>
 
                                     <div class="container m-t-32">        
@@ -104,7 +104,7 @@
                                                 <div class="content-box-wrap">
                                                     <div class="single-image m-b-15">
                                                         <figure class="figure">
-                                                            <img src="assets/images/icons/mobile.png" alt="Mobile">                                                
+                                                            <img src="static/assets/images/icons/mobile.png" alt="Mobile">                                                
                                                         </figure>
                                                     </div>          
                                                     <div class="content-box text-center">
@@ -116,7 +116,7 @@
                                                 <div class="content-box-wrap">
                                                     <div class="single-image m-b-15">
                                                         <figure class="figure">
-                                                            <img src="assets/images/icons/envelope.png" alt="Email">                                                
+                                                            <img src="static/assets/images/icons/envelope.png" alt="Email">                                                
                                                         </figure>
                                                     </div>          
                                                     <div class="content-box">
@@ -128,7 +128,7 @@
                                                 <div class="content-box-wrap">
                                                     <div class="single-image m-b-15">
                                                         <figure class="figure">
-                                                            <img src="assets/images/icons/map.png" alt="Address">                                                
+                                                            <img src="static/assets/images/icons/map.png" alt="Address">                                                
                                                         </figure>
                                                     </div>          
                                                     <div class="content-box">
@@ -219,14 +219,14 @@
         <!--  Scripts -->
         <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyBjcAX9sTd0XRx2zzlnymSuv7-Nzfwu_YA&amp;ver=5.2.4"></script>
 
-        <script type='text/javascript' src='assets/js/vendor/jquery-1.12.4.min.js'></script>
-        <script type='text/javascript' src='assets/js/vendor/TweenMax.min.js'></script>        
-        <script type='text/javascript' src='assets/js/vendor/headsup.min.js'></script>        
-        <script type='text/javascript' src='assets/js/vendor/jquery.easing.min.1.3.js'></script>       
-        <script type='text/javascript' src='assets/lib/cubeportfolio/js/jquery.cubeportfolio.min.js'></script>
-        <script type='text/javascript' src='assets/lib/swiper/js/swiper.min.js'></script>        
+        <script type='text/javascript' src='static/assets/js/vendor/jquery-1.12.4.min.js'></script>
+        <script type='text/javascript' src='static/assets/js/vendor/TweenMax.min.js'></script>        
+        <script type='text/javascript' src='static/assets/js/vendor/headsup.min.js'></script>        
+        <script type='text/javascript' src='static/assets/js/vendor/jquery.easing.min.1.3.js'></script>       
+        <script type='text/javascript' src='static/assets/lib/cubeportfolio/js/jquery.cubeportfolio.min.js'></script>
+        <script type='text/javascript' src='static/assets/lib/swiper/js/swiper.min.js'></script>        
 
-        <script type='text/javascript' src='assets/js/main.js'></script>  
+        <script type='text/javascript' src='static/assets/js/main.js'></script>  
         
         <script>
             document.getElementById('contact-form').addEventListener('submit', function(event) {
