--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -44,9 +44,9 @@
                             </li>
                             <li><a href="https://contextualrobotics.ucsd.edu/faculty" style="color: #182B49;">Research</a>
                             </li>
-                            <li><a href="register.html" style="color: #182B49;">Register</a>
+                            <li><a href="/register" style="color: #182B49;">Register</a>
                             </li>
-                            <li><a href="people.html" style="color: #182B49;">People</a>
+                            <li><a href="/people" style="color: #182B49;">People</a>
                             </li>
                             <li><a href="conduct.html" style="color: #182B49;">Rules</a>
                             </li>
@@ -132,7 +132,7 @@
                                                                 <!--If you have any questions or would like more information about our Aerodrome and how it can support your research, please do not hesitate to reach out to us on our contact page.-->
                                                             </p>
                                                             <div class="btn-container solid">
-                                                                <a href="register.html" title="Register Now">REGISTER</a>
+                                                                <a href="/register" title="Register Now">REGISTER</a>
                                                             </div>
                                                             <br>
                                                             <br>
