--- a/docs/templates/instructions.html
+++ b/docs/templates/instructions.html
@@ -13,10 +13,10 @@
 
         <!-- Links -->      
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
-        <link rel='stylesheet' id='bootstrap-css'  href='assets/lib/bootstrap/css/bootstrap.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='font-awesome-css'  href='assets/css/icons/font-awesome.min.css' type='text/css' media='all' />       
-        <link rel='stylesheet' id='swiper-css' href='assets/lib/swiper/css/swiper.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='cubeportfolio-css'  href='assets/lib/cubeportfolio/css/cubeportfolio.min.css' type='text/css' media='all' />     
+        <link rel='stylesheet' id='bootstrap-css'  href='static/assets/lib/bootstrap/css/bootstrap.min.css' type='text/css' media='all' />
+        <link rel='stylesheet' id='font-awesome-css'  href='static/assets/css/icons/font-awesome.min.css' type='text/css' media='all' />       
+        <link rel='stylesheet' id='swiper-css' href='static/assets/lib/swiper/css/swiper.min.css' type='text/css' media='all' />
+        <link rel='stylesheet' id='cubeportfolio-css'  href='static/assets/lib/cubeportfolio/css/cubeportfolio.min.css' type='text/css' media='all' />     
 
         <link rel='stylesheet' id='main-css'  href='style.css' type='text/css' media='all' />
 
@@ -29,8 +29,8 @@
                 <div class="container">
                     <div id="site-branding">			
                         <a class="logo-brand" href="index.html">
-                            <img class="logo" src="assets/images/logo/logo.png" alt="Logo">					                            
-                            <img class="retina-logo" src="assets/images/logo/logo2x.png" alt="Retina Logo">						                            
+                            <img class="logo" src="static/assets/images/logo/logo.png" alt="Logo">					                            
+                            <img class="retina-logo" src="static/assets/images/logo/logo2x.png" alt="Retina Logo">						                            
                         </a>	
                     </div><!-- .site-branding -->
                     <span id="ham-trigger-wrap">
@@ -66,7 +66,7 @@
                             <article class="page">                                
                                 <div class="entry-content">   
 
-                                    <div class="container-fluid hero-section m-b-35" style="background-image: url(&#39;assets/images/icons/IMG_7993.jpg&#39;); background-position: center right;">  
+                                    <div class="container-fluid hero-section m-b-35" style="background-image: url(&#39;static/assets/images/icons/IMG_7993.jpg&#39;); background-position: center right;">  
                                     </div>
 
                                     <div class="container m-t-90">
@@ -187,14 +187,14 @@
         <!-- Page Wrapper Ends -->
 
         <!--  Scripts -->
-        <script type='text/javascript' src='assets/js/vendor/jquery-1.12.4.min.js'></script>
-        <script type='text/javascript' src='assets/js/vendor/TweenMax.min.js'></script>        
-        <script type='text/javascript' src='assets/js/vendor/headsup.min.js'></script>        
-        <script type='text/javascript' src='assets/js/vendor/jquery.easing.min.1.3.js'></script>       
-        <script type='text/javascript' src='assets/lib/cubeportfolio/js/jquery.cubeportfolio.min.js'></script>
-        <script type='text/javascript' src='assets/lib/swiper/js/swiper.min.js'></script>        
+        <script type='text/javascript' src='static/assets/js/vendor/jquery-1.12.4.min.js'></script>
+        <script type='text/javascript' src='static/assets/js/vendor/TweenMax.min.js'></script>        
+        <script type='text/javascript' src='static/assets/js/vendor/headsup.min.js'></script>        
+        <script type='text/javascript' src='static/assets/js/vendor/jquery.easing.min.1.3.js'></script>       
+        <script type='text/javascript' src='static/assets/lib/cubeportfolio/js/jquery.cubeportfolio.min.js'></script>
+        <script type='text/javascript' src='static/assets/lib/swiper/js/swiper.min.js'></script>        
 
-        <script type='text/javascript' src='assets/js/main.js'></script>      
+        <script type='text/javascript' src='static/assets/js/main.js'></script>      
         <!--  Scripts Ends -->
     
 
