adds conduct/people, extends base

--- a/docs/templates/base.html
+++ b/docs/templates/base.html
@@ -67,6 +67,7 @@
 
         {% endblock content %}
     <!-- Page Wrapper Ends -->
+    <a id="gotoTop" href="/{{current_page}}" class="scroll-top-link" data-easing="easeOutQuad" data-speed="700"><i class="fa fa-angle-up"></i></a>
     <!--  Scripts -->
     <script type='text/javascript' src="{{url_for('static', filename='assets/js/vendor/jquery-1.12.4.min.js')}}"></script>
     <script type='text/javascript' src="{{url_for('static', filename='assets/js/vendor/TweenMax.min.js')}}"></script>        
@@ -76,7 +77,6 @@
     <script type='text/javascript' src="{{url_for('static', filename='assets/lib/swiper/js/swiper.min.js')}}"></script>        
     <script type='text/javascript' src="{{url_for('static', filename='assets/js/main.js')}}"></script>        
     <!--  Scripts Ends -->
-
     <footer id="footer" class="site-footer standard" role="contentinfo">
         <div class="container">
             <div class="site-info">			
