--- a/docs/templates/contact.html
+++ b/docs/templates/contact.html
@@ -1,7 +1,4 @@
 {% extends "base.html" %}
-{% block title %}
-    Index
-{% endblock title %}
 {% block content %}
 <style>
     #thank-you-message {
@@ -158,4 +155,5 @@
                     alert('Error: Please try again later.');
                 });
             });
-        </script>{% endblock content %}
+        </script>
+{% endblock content %}
