--- a/docs/templates/contact.html
+++ b/docs/templates/contact.html
@@ -13,12 +13,12 @@
 
         <!-- Links -->      
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
-        <link rel='stylesheet' id='bootstrap-css'  href='assets/lib/bootstrap/css/bootstrap.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='font-awesome-css'  href='assets/css/icons/font-awesome.min.css' type='text/css' media='all' />       
-        <link rel='stylesheet' id='swiper-css' href='assets/lib/swiper/css/swiper.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='cubeportfolio-css'  href='assets/lib/cubeportfolio/css/cubeportfolio.min.css' type='text/css' media='all' />     
-
-        <link rel='stylesheet' id='main-css'  href='style.css' type='text/css' media='all' />
+        <link rel='stylesheet' id='bootstrap-css'  href="{{ url_for('static', filename='assets/lib/bootstrap/css/bootstrap.min.css') }}" type='text/css' media='all' />
+        <link rel='stylesheet' id='font-awesome-css'  href="{{ url_for('static', filename='assets/css/icons/font-awesome.min.css') }}" type='text/css' media='all' />       
+        <link rel='stylesheet' id='swiper-css' href="{{ url_for('static', filename='assets/lib/swiper/css/swiper.min.css') }}" type='text/css' media='all' />
+        <link rel='stylesheet' id='cubeportfolio-css'  href="{{ url_for('static', filename='assets/lib/cubeportfolio/css/cubeportfolio.min.css') }}" type='text/css' media='all' /> 
+        
+        <link rel='stylesheet' id='main-css' href="{{ url_for('static', filename='style.css') }}" type='text/css' media='all' />
 
         <style>
             #thank-you-message {
@@ -40,10 +40,10 @@
             <header id="masthead" class="site-header standard sticky" role="banner" style="position: fixed; top: 0px; transition: top 0.3s ease 0s;">		
                 <div class="container">
                     <div id="site-branding">			
-                        <a class="logo-brand" href="index.html">
-                            <img class="logo" src="assets/images/logo/logo.png" alt="Logo">					                            
-                            <img class="retina-logo" src="assets/images/logo/logo2x.png" alt="Retina Logo">						                            
-                        </a>	
+                        <a class="logo-brand" href="{{ url_for('index') }}">
+                            <img class="logo" src="{{ url_for('static', filename='assets/images/logo/logo.png') }}" alt="Logo">					                            
+                            <img class="retina-logo" src="{{ url_for('static', filename='assets/images/logo/logo2x.png') }}" alt="Retina Logo">						                            
+                        </a>		
                     </div><!-- .site-branding -->
                     <span id="ham-trigger-wrap">
                         <span class="ham-trigger">
@@ -52,19 +52,19 @@
                     </span>
                     <nav id="site-navigation" class="main-navigation" role="navigation" aria-label="Top Menu">
                         <ul id="top-menu" class="menu">
-                            <li><a href="index.html" style="color: #182B49;">Home</a>
+                            <li><a href="{{ url_for('index') }}" style="color: #182B49;">Home</a>
                             </li>
                             <li><a href="https://contextualrobotics.ucsd.edu/faculty" style="color: #182B49;">Research</a>
                             </li>
-                            <li><a href="register.html" style="color: #182B49;">Register</a>
+                            <li><a href="{{ url_for('register') }}" style="color: #182B49;">Register</a>
                             </li>
-                            <li><a href="people.html" style="color: #182B49;">People</a>
+                            <li><a href="{{ url_for('people') }}" style="color: #182B49;">People</a>
                             </li>
-                            <li><a href="conduct.html" style="color: #182B49;">Rules</a>
+                            <li><a href="{{ url_for('conduct') }}" style="color: #182B49;">Rules</a>
                             </li>
-                            <li><a href="instructions.html" style="color: #182B49;">Instructions</a>
+                            <li><a href="{{ url_for('instructions') }}" style="color: #182B49;">Instructions</a>
                             </li>
-                            <li class="current-menu-parent"><a href="contact.html" style="color: #00629B;">Contact</a>
+                            <li class="current-menu-parent"><a href="{{ url_for('contact') }}" style="color: #00629B;">Contact</a>
                             </li>
                         </ul>	
                     </nav>                                               
@@ -78,7 +78,7 @@
                             <article class="page">                                
                                 <div class="entry-content">     
                                     
-                                    <div class="container-fluid hero-section m-b-35" style="background-image: url(&#39;assets/images/icons/IMG_7996.jpg&#39;); background-position: left top;">  
+                                    <div class="container-fluid hero-section m-b-35" style="background-image: url(&#39;{{ url_for('static', filename='assets/images/icons/IMG_7996.jpg') }}&#39;); background-position: left top;">  
                                     </div>
 
                                     <div class="container m-t-32">        
@@ -116,7 +116,7 @@
                                                 <div class="content-box-wrap">
                                                     <div class="single-image m-b-15">
                                                         <figure class="figure">
-                                                            <img src="assets/images/icons/envelope.png" alt="Email">                                                
+                                                            <img src="{{ url_for('static', filename='assets/images/icons/envelope.png') }}" alt="Email">                                                
                                                         </figure>
                                                     </div>          
                                                     <div class="content-box">
@@ -128,7 +128,7 @@
                                                 <div class="content-box-wrap">
                                                     <div class="single-image m-b-15">
                                                         <figure class="figure">
-                                                            <img src="assets/images/icons/map.png" alt="Address">                                                
+                                                            <img src="{{ url_for('static', filename='assets/images/icons/map.png') }}" alt="Address">                                                
                                                         </figure>
                                                     </div>          
                                                     <div class="content-box">
@@ -197,7 +197,7 @@
                         </main><!-- #main -->
                     </div><!-- #primary -->                                
 
-                    <a id="gotoTop" href="./contact.html" class="scroll-top-link" data-easing="easeOutQuad" data-speed="700"><i class="fa fa-angle-up"></i></a>
+                    <a id="gotoTop" href="{{ url_for('contact') }}" class="scroll-top-link" data-easing="easeOutQuad" data-speed="700"><i class="fa fa-angle-up"></i></a>
 
                 </div><!-- #content -->
 
@@ -217,16 +217,14 @@
         <!-- Page Wrapper Ends -->
 
         <!--  Scripts -->
-        <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyBjcAX9sTd0XRx2zzlnymSuv7-Nzfwu_YA&amp;ver=5.2.4"></script>
+        <script type='text/javascript' src="{{url_for('static', filename='assets/js/vendor/jquery-1.12.4.min.js')}}"></script>
+        <script type='text/javascript' src="{{url_for('static', filename='assets/js/vendor/TweenMax.min.js')}}"></script>        
+        <script type='text/javascript' src="{{url_for('static', filename='assets/js/vendor/headsup.min.js')}}"></script>        
+        <script type='text/javascript' src="{{url_for('static', filename='assets/js/vendor/jquery.easing.min.1.3.js')}}"></script>       
+        <script type='text/javascript' src="{{url_for('static', filename='assets/lib/cubeportfolio/js/jquery.cubeportfolio.min.js')}}"></script>
+        <script type='text/javascript' src="{{url_for('static', filename='assets/lib/swiper/js/swiper.min.js')}}"></script>        
 
-        <script type='text/javascript' src='assets/js/vendor/jquery-1.12.4.min.js'></script>
-        <script type='text/javascript' src='assets/js/vendor/TweenMax.min.js'></script>        
-        <script type='text/javascript' src='assets/js/vendor/headsup.min.js'></script>        
-        <script type='text/javascript' src='assets/js/vendor/jquery.easing.min.1.3.js'></script>       
-        <script type='text/javascript' src='assets/lib/cubeportfolio/js/jquery.cubeportfolio.min.js'></script>
-        <script type='text/javascript' src='assets/lib/swiper/js/swiper.min.js'></script>        
-
-        <script type='text/javascript' src='assets/js/main.js'></script>  
+        <script type='text/javascript' src="{{url_for('static', filename='assets/js/main.js')}}"></script>   
         
         <script>
             document.getElementById('contact-form').addEventListener('submit', function(event) {
