--- a/docs/templates/index.html
+++ b/docs/templates/index.html
@@ -19,16 +19,20 @@
         <link rel='stylesheet' id='cubeportfolio-css'  href="{{ url_for('static', filename='assets/lib/cubeportfolio/css/cubeportfolio.min.css') }}" type='text/css' media='all' /> 
         
         <link rel='stylesheet' id='main-css' href="{{ url_for('static', filename='style.css') }}" type='text/css' media='all' />
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
         
     </head>
     <body data-new-gr-c-s-check-loaded="14.1094.0" data-gr-ext-installed="" style="margin-top: 150px;">
+    
 
         <!-- Page Wrapper -->
         <div id="page" class="site">
             <header id="masthead" class="site-header standard sticky" role="banner" style="position: fixed; top: 0px; transition: top 0.3s ease 0s;">		
                 <div class="container">
                     <div id="site-branding">			
-                       <a class="logo-brand" href="index.html">
+                       <a class="logo-brand" href="{{ url_for('index') }}">
                             <img class="logo" src="{{ url_for('static', filename='assets/images/logo/logo.png') }}" alt="Logo">					                            
                             <img class="retina-logo" src="{{ url_for('static', filename='assets/images/logo/logo2x.png') }}" alt="Retina Logo">						                            
                         </a>	
@@ -40,19 +44,19 @@
                     </span>
                     <nav id="site-navigation" class="main-navigation" role="navigation" aria-label="Top Menu">
                         <ul id="top-menu" class="menu">
-                            <li class="current-menu-parent"><a href="index.html" style="color: #00629B;">Home</a>
+                            <li class="current-menu-parent"><a href="{{ url_for('index') }}" style="color: #00629B;">Home</a>
                             </li>
                             <li><a href="https://contextualrobotics.ucsd.edu/faculty" style="color: #182B49;">Research</a>
                             </li>
-                            <li><a href="register.html" style="color: #182B49;">Register</a>
+                            <li><a href="{{ url_for('register') }}" style="color: #182B49;">Register</a>
                             </li>
-                            <li><a href="people.html" style="color: #182B49;">People</a>
+                            <li><a href="{{ url_for('people') }}" style="color: #182B49;">People</a>
                             </li>
-                            <li><a href="conduct.html" style="color: #182B49;">Rules</a>
+                            <li><a href="{{ url_for('conduct') }}" style="color: #182B49;">Rules</a>
                             </li>
-                            <li><a href="instructions.html" style="color: #182B49;">Instructions</a>
+                            <li><a href="{{ url_for('instructions') }}" style="color: #182B49;">Instructions</a>
                             </li>
-                            <li><a href="contact.html" style="color: #182B49;">Contact</a>
+                            <li><a href="{{ url_for('contact') }}" style="color: #182B49;">Contact</a>
                             </li>
                         </ul>	
                     </nav>                                               
@@ -132,7 +136,7 @@
                                                                 <!--If you have any questions or would like more information about our Aerodrome and how it can support your research, please do not hesitate to reach out to us on our contact page.-->
                                                             </p>
                                                             <div class="btn-container solid">
-                                                                <a href="register.html" title="Register Now">REGISTER</a>
+                                                                <a href="{{ url_for('register') }}" title="Register Now">REGISTER</a>
                                                             </div>
                                                             <br>
                                                             <br>
@@ -143,7 +147,7 @@
                                                                 </h1>
                                                             </div>
                                                             <div role="form" class="kraftcf">                                                    
-                                                                <form action="/create-event" method="post" class="kraftcf-form">                                                       
+                                                                <form id="createEventForm" class="kraftcf-form">                                                       
                                                                     <div class="contact-form-main">
                                                                         <div class="contact-form-fields-wrap clearfix">
                                                                             <div class="contact-form-fields">
@@ -213,7 +217,7 @@
                                                                 Let's work together! 								
                                                             </h2>				
                                                             <div class="btn-container solid">
-                                                                <a href="contact.html" title="GET IN TOUCH">GET IN TOUCH</a>
+                                                                <a href="{{ url_for('contact') }}" title="GET IN TOUCH">GET IN TOUCH</a>
                                                             </div>				
                                                         </div>
                                                     </div>
@@ -289,6 +293,41 @@
 
             document.getElementById('start-time').value = '00:00';
             document.getElementById('end-time').value = '00:00'; 
+        </script>
+
+        <!-- Booking -->
+        <script>
+            $(document).ready(function() {
+                $('#createEventForm').submit(function(e) {
+                    e.preventDefault(); // Prevent the default form submission
+            
+                    var formData = {
+                        name: $('#name').val(),
+                        email: $('input[name="email"]').val(),
+                        title: $('input[name="title"]').val(),
+                        date: $('input[name="date"]').val(),
+                        'start-time': $('input[name="start-time"]').val(),
+                        'end-time': $('input[name="end-time"]').val(),
+                    };
+            
+                    $.ajax({
+                        url: '/create-event',
+                        type: 'POST',
+                        contentType: 'application/json',
+                        data: JSON.stringify(formData),
+                        success: function(response) {
+                            console.log(response);
+                            // Handle success (e.g., showing a success message)
+                            alert('Event created successfully!');
+                        },
+                        error: function(xhr, status, error) {
+                            // Handle error
+                            console.error("Error: " + status + " " + error);
+                            alert('Failed to create the event.');
+                        }
+                    });
+                });
+            });
         </script>
     
 
